--- a/languages/backstage.pot
+++ b/languages/backstage.pot
@@ -1,9 +1,9 @@
-# Copyright (C) 2018 Customizer Guest Demo Access
-# This file is distributed under the same license as the Customizer Guest Demo Access package.
+# Copyright (C) 2018 Backstage
+# This file is distributed under the same license as the Backstage package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Customizer Guest Demo Access 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/customizer-guest-demo-access\n"
+"Project-Id-Version: Backstage 1.0.0\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/backstage\n"
 "POT-Creation-Date: 2018-09-27 10:57:34+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,40 +20,40 @@ msgstr ""
 msgid "We support only require, require_once, include, and include_once."
 msgstr ""
 
-#: includes/class-CGDA.php:138
+#: includes/class-Backstage.php:138
 msgid "Customizer Preview"
 msgstr ""
 
-#: includes/class-CGDA.php:158
-msgid "Something is wrong! We couldn't find the user role needed for Customizer Guest Demo Access. Try to deactivate and activate the plugin again."
+#: includes/class-Backstage.php:158
+msgid "Something is wrong! We couldn't find the user role needed for Backstage. Try to deactivate and activate the plugin again."
 msgstr ""
 
-#: includes/class-CGDA.php:214
-msgid "Something is very wrong! We couldn't create the user needed for Customizer Guest Demo Access."
+#: includes/class-Backstage.php:214
+msgid "Something is very wrong! We couldn't create the user needed for Backstage."
 msgstr ""
 
-#: includes/class-CGDA.php:225
-msgid "Something is very wrong! We couldn't find the user needed for Customizer Guest Demo Access. Try to deactivate and activate the plugin again."
+#: includes/class-Backstage.php:225
+msgid "Something is very wrong! We couldn't find the user needed for Backstage. Try to deactivate and activate the plugin again."
 msgstr ""
 
-#: includes/class-CGDA.php:492 includes/class-Settings.php:131
+#: includes/class-Backstage.php:492 includes/class-Settings.php:131
 msgid "Back to Demo"
 msgstr ""
 
-#: includes/class-CGDA.php:495 includes/class-Settings.php:154
+#: includes/class-Backstage.php:495 includes/class-Settings.php:154
 msgid "<b>Demo Mode</b><p>You can't upload images and save settings.</p>"
 msgstr ""
 
-#: includes/class-CGDA.php:631 includes/class-Settings.php:213
+#: includes/class-Backstage.php:631 includes/class-Settings.php:213
 msgid "Customize Styles"
 msgstr ""
 
 #: includes/class-Settings.php:53
-msgid "Customizer Guest Demo Access Setup"
+msgid "Backstage Setup"
 msgstr ""
 
 #: includes/class-Settings.php:99
-msgid "Customizer Guest Access"
+msgid "Backstage"
 msgstr ""
 
 #: includes/class-Settings.php:120
@@ -73,7 +73,7 @@ msgid "Notice Style"
 msgstr ""
 
 #: includes/class-Settings.php:136
-msgid "Set the style/type of the Customizer notice. If \"Custom\", you can target the notification with the \".notice-cgda-custom\" CSS selector."
+msgid "Set the style/type of the Customizer notice. If \"Custom\", you can target the notification with the \".notice-backstage-custom\" CSS selector."
 msgstr ""
 
 #: includes/class-Settings.php:141
@@ -185,7 +185,7 @@ msgid "Custom Button Instructions"
 msgstr ""
 
 #: includes/class-Settings.php:332
-msgid "Since you wish to have control and handle your own button, we will make it easy for you. You use the \"cgda_get_customizer_link()\" PHP function to get the link to the Customizer. Output it directly or send it to JS via a localized variable."
+msgid "Since you wish to have control and handle your own button, we will make it easy for you. You use the \"backstage_get_customizer_link()\" PHP function to get the link to the Customizer. Output it directly or send it to JS via a localized variable."
 msgstr ""
 
 #: includes/class-Settings.php:346
@@ -228,7 +228,7 @@ msgstr ""
 msgid "Unserializing instances of this class is forbidden."
 msgstr ""
 #. Plugin Name of the plugin/theme
-msgid "Customizer Guest Demo Access"
+msgid "Backstage"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
